# rezepte

./: .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: auth.py  main.py
docker/: .env.prod.example  .env.prod.secrets.example  .env.test.example  .env.test.secrets.example  backend.Dockerfile  backend.Dockerfile.dockerignore  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  frontend.Dockerfile  frontend.Dockerfile.dockerignore  rezepte.sh
docker/nginx/prod/: rezepte.bootstrap.conf  rezepte.https.conf
docker/nginx/prod/conf.d/: rezepte.conf
docker/nginx/test/conf.d/: rezepte.conf
docs/: docker-commands.md  keycloak-integration.md
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  styles.css
